--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vechicin/Testing-Practice.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Santiago Velosa",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/vechicin/Testing-Practice/issues"
   },
   "homepage": "https://github.com/vechicin/Testing-Practice#readme",
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.3"
+    "jest": "^27.4.3"
   }
 }
